package fr.snapgames.fromclasstogame.core.entity;

public interface Entity {

}