@startuml "Game Internal Architecture"
hide members
hide methods

package "fr.snapgames.fromclasstogame" {
    package "core" <<Frame>>{

        class Game
        note right of Game: This is the main class o fthe framework
        package "config" <<Frame>>{
            class Configuration
        }
        package "io" <<Frame>>{
            class ResourceManager
            class InputHandler
        }
        package "scene" <<Frame>>{
            interface Scene
            class AbstractScene implements Scene
            class SceneManager
        }
        package "gfx" <<Frame>>{
            class Render
            note right of Render : The render class is the graphics drawer
            interface RenderHelper
            class GameObjectRenderHelper implements RenderHelper
            class TextObjectRenderHelper implements RenderHelper
            class Window
        }

        package "entity" <<Frame>>{
            interface Entity
            class GameObject implements Entity
            class TextObject extends GameObject
        }

        Game -- Configuration:config
        Game -- ResourceManager:resMgr
        Game -- SceneManager:sceneMgr
        Game -- Render:render
        Game -- Window:window
        Game -- InputHandler:ih
        SceneManager --> Scene:scenes
        Scene --> GameObject:objects
        Render --> RenderHelper:renderHelpers
        Render --> GameObject:objects
        GameObject -- Color
        GameObject -- BufferedImage
        Render -- Dimension
        Render -- Graphics2D
        ResourceManager -- BufferedImage
        Window -- JFrame
    }
}
@enduml
